--- a/meu_site/index.html
+++ b/meu_site/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     
+    <h2>Este é meu site</h2>
+    <hr>
+    <p>
+        Site exemplo para desenvolver o aprendizado de versionamento, utilizando o GIT e o GitHub.
+
+    </p>
+
 </body>
 </html>
